<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".SignUp_Form">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/full_name"
        android:id="@+id/FullName"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/user_name"
        android:id="@+id/UserName"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:textSize="20sp" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="Email"
        android:id="@+id/inputEmail"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/password"
        android:id="@+id/inputPassword"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="Confirm password"
        android:id="@+id/inputConfirmPassword"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:textSize="20sp" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="20sp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:layout_marginStart="10dp"
            android:textSize="20sp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/female"
            android:textSize="20sp"/>

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:id="@+id/register"
        android:text="@string/register"
        android:textSize="22sp"
        android:onClick="btn_HomePage"/>

</LinearLayout>