<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Login_Form">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/login"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="Email"
        android:id="@+id/inputEmail"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/password"
        android:id="@+id/inputPassword"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:id="@+id/login"
        android:text="@string/login"
        android:textSize="22sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/register"
        android:text="@string/register"
        android:textSize="22sp"
        android:onClick="btn_signupForm"/>

</LinearLayout>